# C-_group_7

./: .gitignore  README.md
hw_1/: README.md  main.cpp
hw_1_group_7/: hw_1_group_7_v1.cpp  hw_1_group_7_v1.ilk
hw_2/: CMakeLists.txt  README.md  main.cpp  order_history.csv  src.cpp  src.h
phase_1/: CMakeLists.txt  README.md  aligned_unaligned_results.csv  benchmark_results.csv  benchmark_results2.csv  benchmarking.cpp  benchmarking.h  main.cpp  plot.py  report.docx  report_final.docx  report_kp.docx  report_st.docx  src.cpp  src.h
phase_1/tests/: test_src.cpp
phase_2/: CMakeLists.txt  README.md  hft_client.cpp  hft_server.cpp  strategy.md
